frontend/test/should_pass/exectype_AssignSequenceResultToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:boolean=(r));
	}
}