frontend/test/should_fail/exectype_AssignSetmapEmptyToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=42 ;> {b:boolean=x.empty()});
	}
}